# personal-finance-management

./: .env.example  .gitignore  README.md  app.py  categorize.py  config.py  pyproject.toml  requirements.txt  ruff.toml  setup_scheduler.ps1  sheets.py  sync.py  sync_job.py
.github/workflows/: ci.yml
static/: style.css
templates/: base.html  dashboard.html  index.html  setup.html
