[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stripe-bank-sync"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "stripe>=10.0",
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
    "boto3>=1.34",
    "click>=8.0",
]

[project.scripts]
bank-sync = "sync_job:cli"
